adjusted small issues that would come up with using java11